# Y-VK

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  Device.cpp  Device.h  ForwardDeclation.h  FrameBuffer.h  Image.h  Instance.cpp  Instance.h  LICENSE  Mesh.cpp  Mesh.h  PipelineBase.cpp  PipelineBase.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  Queue.h  RenderContext.cpp  RenderFrame.cpp  RenderFrame.h  RenderPass.h  RenderTarget.cpp  RenderTarget.h  SwapChain.cpp  SwapChain.h  VertexData.h  Vulkan.h  Window.h  log.md  readme.md  (+1 more)
docs/: ibl.md  (+2 more)
ext/: CMakeLists.txt
ext/VulkanMemoryAllocator/: CHANGELOG.md  README.md
ext/astc/: CMakeLists.txt
ext/glfw/: INSTALL_RECEIPT.json
ext/glfw/.brew/: glfw.rb
ext/glfw/docs/: extra.scss
ext/glfw/examples/: particles.c  splitview.c
ext/glfw/src/: x11_init.c
ext/glfw/tests/: allocator.c  clipboard.c  cursor.c  empty.c  events.c  gamma.c  icon.c  iconify.c  inputlag.c  joysticks.c  monitors.c  msaa.c  reopen.c  tearing.c  threads.c  timeout.c  title.c  window.c
ext/glm/: CMakeLists.txt  common.hpp
ext/glm/detail/: setup.hpp  type_quat_simd.inl
ext/glm/ext/: matrix_transform.hpp
ext/glm/gtc/: type_ptr.hpp
ext/glm/gtx/: intersect.inl  matrix_decompose.inl
ext/ktx/lib/: filestream.c
ext/metis/: CMakeLists.txt
ext/stb_image/: stb_image.c  stb_image.h
ext/tinyobjloader/: .travis.yml  README.md  azure-pipelines.yml  setup.py
ext/tinyobjloader/jni/: Android.mk
ext/tinyobjloader/tests/: acutest.h  tester.cc
ext/vma/src/: Tests.cpp  VmaUsage.h  vk_mem_alloc.h
framework/: API_VK.cpp  API_VK.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  Device.cpp  Device.h  FIleUtils.cpp  FIleUtils.h  ForwardDeclation.h  FrameBuffer.cpp  FrameBuffer.h  GlslCompiler.cpp  GlslCompiler.h  Gui.cpp  Gui.h  InputEvent.cpp  InputEvent.h  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  PipelineState.cpp  PipelineState.h  Queue.cpp  Queue.h  RenderContext.cpp  RenderContext.h  RenderFrame.cpp  RenderFrame.h  RenderPass.cpp  RenderPass.h  (+27 more)
framework/App/: ApiAPP.cpp  ApiAPP.h  Application.cpp  Application.h
framework/Command/: CommandPool.cpp  CommandPool.h
framework/Common/: FIleUtils.cpp  FIleUtils.h  Log.h  ResourceCache.cpp  ResourceCache.h  String.cpp  String.h  VK_COMMON.cpp  VK_COMMON.h  VkCommon.cpp  VkCommon.h  VkUtils.cpp  VkUtils.h  VulkanInitializers.cpp  VulkanInitializers.h
framework/Core/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  FrameBuffer.cpp  FrameBuffer.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineState.cpp  PipelineState.h  Queue.cpp  Queue.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  ResourceBindingState.h  ResourceCachingHelper.h  SwapChain.h  Texture.cpp  Vulkan.h
framework/Core/Descriptor/: DescriptorLayout.cpp  DescriptorLayout.h  DescriptorSet.cpp  DescriptorSet.h
framework/Core/Device/: Device.cpp  Device.h  Instance.cpp  Instance.h
framework/Core/Images/: Image.cpp  ImageUtil.cpp  ImageUtil.h  Sampler.cpp  Sampler.h
framework/Core/Shader/: GlslCompiler.cpp  GlslCompiler.h  Shader.cpp  Shader.h  SpirvShaderReflection.h
framework/Descriptor/: DescriptorLayout.cpp  DescriptorLayout.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h
framework/Gui/: Gui.h
framework/Images/: Image.cpp  Image.h  ImageUtil.h  ImageView.cpp  ImageView.h  Sampler.cpp  Sampler.h
framework/RenderGraph/: BlackBoard.cpp  BlackBoard.h  GeomPass.cpp  GeomPass.h  PassNode.cpp  PassNode.h  RenderGraph.cpp  RenderGraph.h  RenderGraphId.cpp  RenderGraphId.h  RenderGraphNode.h  RenderGraphPass.cpp  RenderGraphPass.h  RenderGraphResources.cpp  RenderGraphResources.h  RenderGraphTexture.cpp  RenderGraphTexture.h  VirtualResource.cpp  VirtualResource.h
framework/RenderPass/: RenderPassExecutor.cpp  RenderPassExecutor.h
framework/Scene/: Compoment.h  Image.cpp  KtxFormat.cpp  KtxFormat.h  Scene.cpp  Scene.h  SceneUtil.cpp  SceneUtil.h  SgImage.cpp  SgImage.h  gltfloader.cpp  gltfloader.h
framework/Scene/Compoments/: Camera.cpp  Camera.h  RenderPrimitive.h  Transform.cpp
framework/Scene/Images/: AstcImageHelper.cpp  AstcImageHelper.h  KtxImage.cpp  KtxImage.h  StbImage.cpp  StbImage.h  TtfImage.cpp  TtfImage.h
framework/Sync/: Fence.h
framework/Utils/: BufferPool.cpp  BufferPool.h  DebugUtils.h  Enums.h  SpirvShaderReflection.cpp  SpirvShaderReflection.h  VkUtils.cpp  VkUtils.h
framework/defered/: Defered.cpp  Defered.h
src/framework/: CMakeLists.txt
src/framework/App/: Application.cpp  Application.h
src/framework/Common/: BitMaskEnums.cpp  BitMaskEnums.h  Config.cpp  Config.h  DebugUtils.cpp  DebugUtils.h  Distrib.cpp  Distrib.hpp  Enums.h  FIleUtils.cpp  FIleUtils.h  JsonUtil.cpp  JsonUtil.h  Log.cpp  Log.h  RTConfing.cpp  RTConfing.h  RenderConfig.cpp  RenderConfig.h  ResourceCache.cpp  ResourceCache.h  TextureHelper.cpp  TextureHelper.h  Timer.cpp  Timer.h  VkCommon.cpp  VkCommon.h  VkUtils.h
src/framework/Core/: BoundingBox.cpp  BoundingBox.h  Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  CameraComponent.cpp  CameraComponent.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  FrameBuffer.cpp  FrameBuffer.h  PCH.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  PipelineState.cpp  PipelineState.h  Queue.cpp  Rect.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  ResourceBindingState.cpp  ResourceBindingState.h  ResourceCachingHelper.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TransientBuffer.cpp  TransientBuffer.h  (+5 more)
src/framework/Gui/: Gui.cpp  Gui.h  imfilebrowser.h
src/framework/IO/: ImageIO.cpp  ImageIO.h
src/framework/PlatForm/: Window.cpp  Window.h
src/framework/PostProcess/: Bloom.h  PostProcess.cpp  PostProcess.h
(+850 files in other folders)
